// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XCM tests for Mangata <-> imbue SDK ROC - imbue transfer assets to mangata 1`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 899996979519231,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - imbue transfer assets to mangata 2`] = `
{
  "free": 1099983872000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - imbue transfer assets to mangata: Before 1`] = `
{
  "free": 1000000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - imbue transfer assets to mangata: Before 2`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 1000000000000000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - imbue transfer assets to mangata: system events 1`] = `[]`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - mangata transfer assets to imbue 1`] = `
{
  "free": 990000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - mangata transfer assets to imbue 2`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 1009991987200000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - mangata transfer assets to imbue: Before 1`] = `
{
  "free": 1000000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - mangata transfer assets to imbue: Before 2`] = `
{
  "consumers": 0,
  "data": {
    "feeFrozen": 0,
    "free": 1000000000000000,
    "miscFrozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`XCM tests for Mangata <-> imbue SDK ROC - mangata transfer assets to imbue: system events 1`] = `[]`;
